src/scss/phy/questions.scss
@import "../common/questions";

.question-panel > .content-chunk > .content-value,
.question-component .question-content {
  font-family: $primary-font;
}
.question-panel > .content-chunk > .content-value {
  background: none;
  box-shadow: none;
  padding: 0 0.25rem;
  font-weight: 400;
}

@include respond-above(xs) {
  :not(.generic-panel):not(.concept-panel):not(.question-panel) > .content-chunk > .figure-panel {
    // if a figure is in the top level of a content block that is not the top level of a page (i.e. preamble), indent it. otherwise (i.e. when inside a layout component), leave it for that component to handle
    // TODO: move the padding from this to the layout component (usually accordions!)
    padding: 0 3rem;

    // Ensure that the top box shadow is not cut off for figures at the top of accordions
    &:first-child {
      padding-top: 1.5rem;
    }
  }
}

.question-panel .isaac-accordion {
  @include no-print {
    background: $gray-103;
  }
  .card-body > .content-chunk > .content-value {
    padding-left: 1.625rem;
    padding-right: 1.625rem;
    font-size: $question-font-size;
    line-height: $question-line-height;
  }

  // Fluent redesign
  .card-body:has(.question-component) {
    padding: 0;
  }

  .question-component {
    padding: 1rem 1.5rem;
    background-color: var(--subject-color-50);
    border: 1px solid var(--subject-color-100);
    border-radius: 8px;

    &:has(> .validation-response-panel.correct) {
      padding-bottom: 0;
    }
  }

  .question-component:not(.expansion-layout) {
    margin-left: -0.5rem;
    margin-right: -0.5rem;

    // Make sure that reorder questions have a background when they expand on Phy
    box-shadow: none;
    margin-bottom: 1.5rem;
  }
  // Make sure the banner does not overflow on reorder questions on Phy
  div:not(.expansion-layout) > .validation-response-panel {
    border-radius: 0 0 8px 8px;
    &.correct, &.almost {
      margin-left: -1.5rem;
      margin-right: -1.5rem;
      padding-left: 1.5rem;
      padding-right: 1.5rem;
    }
  }

  form + form {
    .question-component {
      margin-top: 4rem;
    }
  }
}

.question-tag-indicator {
    background-color: $color-misc-llm;
    color: $color-neutral-900;
    border: 2px solid $color-neutral-900;

    &.small {
        border: 1px solid $color-neutral-900 !important;
        font-weight: 600 !important;
    }
}

.concept-content-container, .generic-content-container {
  .quick-question {
    .question-content, .content-value, .btn {
      font-size: 1rem !important;
    }
  }
}

.symbolic-question,
.equality-page {
  .eqn-editor-preview {
    font-size: 1.25rem;
    border: solid 1px $black;
  }
}

.validation-response-panel {
  .question-response {
    font-family: desyrel, serif;
    font-size: 36px;
    font-weight: 600;
  }
  h1 {
    font-family: desyrel, serif;
    font-size: 48px;
    font-weight: 700;
  }
  &.correct {
    background: var(--subject-color-500);
    color: white;
    .figure-reference, a {
      color: white !important;
    }
  }
  &.almost {
    background: #ffb847;
    color: #3c0000;
    .figure-reference {
      color: #3c0000;
    }
  }
  &.correct, &.almost {
    code {
      background-color: transparent;
    }
  }
}

.numeric-question {
  .numeric-help.numeric-help {
    color: $color-neutral-900;
    font-size: 0.875rem;
  }

  .unit-selection {
    .display-unit {
      opacity: 1 !important;
    }
    .dropdown-item {
      &:active {
        background-color: var(--subject-color-500);
        color: white;
      }
      &:focus {
        box-shadow: 0 0 0 0.25rem color-mix(in srgb, var(--subject-color-500) 25%, transparent);
      }
    }
  }
}

// styling for question components outside an accordion
form:has(> .question-component), div.quiz-question-container:has(> .question-component) {
  background-color: white;
  box-shadow: 0 2px 30px 0 rgba(0, 0, 0, 0.08);
  padding: 0;
  border: 2px solid var(--nav-primary);
  border-radius: 8px;
  margin-bottom: 1rem;

  > .question-component > div:first-child {
    &:not(.freetext-question) {
      padding: 2rem 2rem 0.5rem;

      &:last-child:not(.quick-question) {
        padding-bottom: 3rem;
      }
    }

    &.freetext-question {
      padding: 2rem 2rem 0rem;
    }
  }

  > .tabbed-hints {
    padding: 0 2rem;
  }

  &:has(> .question-component .quick-question) {
    background-color: initial;
  }

  &:not(:has(.question-component > .validation-response-panel.correct)) {
    padding-bottom: 1rem;
  }
}

// any such styling that should not be present in an accordion
.isaac-accordion form:has(> .question-component), .isaac-accordion div.quiz-question-container:has(> .question-component) {
  border: unset;
  // padding is overridden above
  border-radius: unset;
  box-shadow: none;

  > .question-component > div:first-child {
    @include respond-below(md) {
      padding: 0.5rem 0;
    }
    @include respond-above(md) {
      padding: 0.5rem;
    }
  }

  > .tabbed-hints, > .question-component > .quick-question:first-child {
    padding: 0;
  }
}

.coordinate-input-separator, .coordinate-input > span {
  font-size: 1.2rem;
}

